# napari-absorptix

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.cfg
.napari/: DESCRIPTION.md
data/: 405.npy  561.npy  647.npy
data/fixed/: 405_2.npy  488.npy  488_2.npy  561_2.npy  647_2.npy
data/parafin/: 405.npy  488.npy  561.npy  647.npy
scripts/: process_data.py
src/napari_absorptix/: __init__.py  _absorption.py  _dock_widgets.py  _reader.py  napari.yaml
