[metadata]
name = napari-absorptix
version = 0.0.1
author = Jules Scholler
author_email = jules.scholler@wysscenter.ch
url = https://github.com/WyssCenter
license = MPL-2.0
description = Measure absorption of samples in light sheet microscopy data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Framework :: napari
	Topic :: Software Development :: Testing
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: OS Independent
	License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir = 
	=src
# add your package requirements here
install_requires = 
	numpy
	napari[all]
	scipy
	matplotlib
	napari_tools_menu
	magic-class
	napari-plugin-engine>=0.1.4

[options.packages.find]
where = src

[options.entry_points]
napari.manifest = 
	napari-absorptix = napari_absorptix:napari.yaml

[options.package_data]
napari_absorptix = napari.yaml

